--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,10 +40,10 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="RAZ Productions"
-application/product_name="Toothy Lantern"
+application/company_name="RA4Z"
+application/product_name="Prison Hell"
 application/file_description=""
-application/copyright=""
+application/copyright="RA4Z"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
